# chathletique-mcp

./: .codespellignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  STRAVA_README.md  main.py  mcp_utils.py  pyproject.toml  requirements.txt  strava_tools.py  weather.py  weather_tools.py
.github/workflows/: pre-commit.yml
experimentations/: Heart_speed_fig.py  create_itinerary.py  get_last_runs.py  one_call.py
src/chathletique_mcp/: __init__.py  main.py  mcp_utils.py  strava_tools.py
src/chathletique_mcp/oauth/: app.py
src/chathletique_mcp/oauth_experimentations/: app.py  client.py  server.py
src/strava_mcp/: __init__.py  main.py  mcp_utils.py  strava_tools.py  weather_tools.py
tests/: README.md  Segment_path.py  __init__.py  segment_path.py  test_mcp_utils.py  test_strava_tools.py  test_weather_tools.py
