[project]
name = "mcp-server-template"
version = "0.1.0"
description = "Python MCP Server template"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Alpic" }]
keywords = ["mcp", "llm", "alpic", "python"]
dependencies = [
    "arrow>=1.3.0",
    "black>=25.1.0",
    "fastmcp>=2.12.3",
    "mcp>=1.0.0",
    "openrouteservice>=2.3.3",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "stravalib>=2.4",
]
